@@ -4,6 +4,8 @@
 View=DistUpgradeViewGtk,DistUpgradeViewKDE,DistUpgradeViewText
 #View=DistUpgradeViewNonInteractive
 #Depends= python-apt (>= 0.6.0), apt (>= 0.6)
+# the views below support ugprades over ssh connection
+SupportSSH=DistUpgradeViewText,DistUpgradeViewNonInteractive
 
 # Distro contains global information about the upgrade
 [Distro]
