@@ -25,6 +25,8 @@ update-manager (1:0.100) UNRELEASED; urgency=low
   * UpdateManager/UpdateManager.py:
     - disable fixed-hight mode, it can cause incorrect height 
       calculation (thanks to Richie), LP: #273184
+  * DistUpgrade/DistUpgradeController.py:
+    - do not allow gtk/kde upgrades over ssh session (LP: #322482)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 04 Mar 2009 17:28:08 +0100
 
